# kineticj

./: CMakeLists.txt
CMake/: FindNetCDF.cmake  FindTBB.cmake  FindThrust.cmake
